# social

./: README.md  TODO  pyproject.toml  pytest.ini
schemas/: tiktok.json  vk.json  youtube.json
social/: __main__.py  config.py  logger.py
social/bot/: __init__.py  __main__.py  bot.py
social/bot/handlers/: batch_handler.py  profile_handler.py  url_handler.py
social/cli/: __init__.py  app.py  upload_strategy.py
social/cli/commands/: __init__.py  channel.py  config.py  database.py  download.py  info.py  scan.py  upload.py
social/core/: caption_builder.py  entity_resolver.py
social/services/: YT_Downloader.py  channel_info_service.py  channel_operations_service.py  recovery_metadata_parser.py  social_flow_service.py  telegram_message_scanner.py  telegram_recovery_bot_client.py  telegram_topic_service.py  telegram_uploader.py  url_id_extractor.py  video_database.py  video_recovery_service.py
tests/: README.md  conftest.py
tests/e2e/: README.md  authorize_telegram.py  test_social_flow_service_e2e.py  test_telegram_uploader_e2e.py  test_yt_downloader_e2e.py
tests/integration/: test_yt_downloader.py
tests/unit/: test_caption_builder.py  test_config.py  test_entity_resolver.py  test_platforms.py  test_recovery_metadata_parser.py  test_social_flow_pipeline.py  test_telegram_message_scanner.py  test_telegram_recovery_bot_client.py  test_tiktok_platform.py  test_video_recovery_service.py
